# doxysphinx_demo

./: .gitmodules  .readthedocs.yaml  OLD_README.md  README.md
.github/workflows/: update_submodules.yml
doc/source/: Doxyfile  conf.py  index.rst
doc/source/docs/doxygen/html/: annotated.html  classAdult__inherit__graph.map  classAdult__inherit__graph.md5  classChild.html  classChild.rst  classChild__coll__graph.map  classHuman-members.html  classHuman-members.rst  classHuman.rst  classHuman__coll__graph.map  classHuman__coll__graph.md5  dir_072ff94b922176a5830bb5db5e0ee289.rst  dir_63ba24759a116577019f7630b2b850a5.html  dir_63ba24759a116577019f7630b2b850a5.rst  dir_db953db19d66d584d241177cc94655f6.html  dir_edebd7b60337be8644898cac79af0cf6.html  functions.rst  functions_class_members.rst  functions_vars.html  graph_legend.rst  hierarchy.html  index.html  index.rst  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  inherits.rst
doc/source/docs/doxygen/xml/: adult_8hpp.xml  child_8cpp.xml  child_8hpp.xml  classChild.xml  dir_072ff94b922176a5830bb5db5e0ee289.xml  dir_63ba24759a116577019f7630b2b850a5.xml  dir_edebd7b60337be8644898cac79af0cf6.xml  index.xml  structHuman_1_1Characterisitcs.xml
humanlib/: CMakeLists.txt  main.cpp
humanlib/include/human/: adult.hpp  child.hpp  human.hpp
humanlib/src/: adult.cpp  child.cpp
sphinx_doc/: Doxyfile
sphinx_doc/source/: Doxyfile  conf.py
sphinx_doc/source/docs/doxygen/html/: annotated.rst  classAdult-members.html  classAdult-members.rst  classAdult.html  classAdult.rst  classHuman.html  (+19 more)
(+18 files in other folders)
